--- a/PieChart/Base.lproj/Main.storyboard
+++ b/PieChart/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="LpK-jI-x47">
-                                <rect key="frame" x="132" y="208.5" width="150" height="479"/>
+                                <rect key="frame" x="132" y="137" width="150" height="479"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Du4-fU-VwQ">
                                         <rect key="frame" x="53" y="0.0" width="44" height="31"/>
@@ -87,23 +87,19 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHARTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vL8-Eu-34c">
-                                <rect key="frame" x="160.5" y="139.5" width="93" height="29"/>
+                                <rect key="frame" x="160.5" y="88" width="93" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2z0-MZ-sNQ">
-                                <rect key="frame" x="0.0" y="700" width="414" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="LpK-jI-x47" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FdW-2J-ZZ0"/>
-                            <constraint firstItem="LpK-jI-x47" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KHt-Qd-IS4"/>
-                            <constraint firstItem="LpK-jI-x47" firstAttribute="top" secondItem="vL8-Eu-34c" secondAttribute="bottom" constant="40" id="Omq-Oa-UgE"/>
+                            <constraint firstItem="vL8-Eu-34c" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Puw-hG-3Mr"/>
                             <constraint firstItem="vL8-Eu-34c" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rt5-DI-s3K"/>
+                            <constraint firstItem="LpK-jI-x47" firstAttribute="top" secondItem="vL8-Eu-34c" secondAttribute="bottom" constant="20" id="gMH-vH-KY7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jx0-M2-4A6"/>
